dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_peer_dead_during_queue_init_sent_no_reset_silent.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_queue_init prev=Init next=QueueBindSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent QueueInit with early data binding_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 [main] DEBUG Transmission failed binding_id=42 reason=PeerDead
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=QueueBindSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=42 status=Shutdown next_offset=5 inflight_bytes=0 remote_max_data=0
