dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_second_write_blocks_until_max_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_queue_init prev=Init next=QueueBindSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent QueueInit with early data stream_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 [main] DEBUG poll_remote_budget received messages stream_id=42 status=QueueBindSent msg_count=1
0:00:00.000000000 [main] DEBUG event=on_queue_confirmed prev=QueueBindSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Flow established stream_id=42
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=FinSent next_offset=6 inflight_bytes=6 remote_max_data=4096
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
